Fix overlapping content on small screen

--- a/main.css
+++ b/main.css
@@ -283,5 +283,9 @@ footer a {
   .certifications div {
     margin: 0 10px;
   }
+  
+  .contact {
+    width: 100%;
+  }
 
 }
